# BinPackingRT

./: .gitignore  README.md  build_and_run.bat  build_project.bat  create_vs_project.bat
cmake/: FindDXC.cmake
sdk/dxc/inc/Support/: dxcapi.use.h
src/: CMakeLists.txt  audio.cpp  audio.h  common.h  fileSystem.cpp  fileSystem.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  shaderCompiler.cpp  shaderCompiler.h  utils.cpp  utils.h
src/assets/: CMakeLists.txt  block_move.txt  block_move2.txt  block_placed.txt  block_placed2.txt  block_rotates.txt  game_start.txt  game_start2.txt  hi_score.txt  level_up.txt  lines_removed.txt  new_block.txt
src/shaders/: BinPackingRT.hlsl  shared.h
